Bug 67213 - crash on opening AutoText dialog (Ctrl+F3)
Summary: crash on opening AutoText dialog (Ctrl+F3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-23 10:40 UTC by Ivan Timofeev (retired)
Modified: 2013-07-24 17:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Timofeev (retired) 2013-07-23 10:40:35 UTC
Here is what I get on Ctrl+F3 in Writer:


terminate called after throwing an instance of 'com::sun::star::uno::DeploymentException'

(gdb) bt
[...]
#7  0xad4e2025 in com::sun::star::frame::FrameControl::create(com::sun::star::uno::Reference<com::sun::star::uno::XComponentContext> const&) ()
   from /home/ivan/libo/master/solver/unxlngi6.pro/installation/opt/program/../program/libswlo.so
#8  0xad4deb07 in SwOneExampleFrame::CreateControl() ()
   from /home/ivan/libo/master/solver/unxlngi6.pro/installation/opt/program/../program/libswlo.so
#9  0xad4e17da in SwOneExampleFrame::SwOneExampleFrame(Window&, unsigned long, Link const*, String*) ()
   from /home/ivan/libo/master/solver/unxlngi6.pro/installation/opt/program/../program/libswlo.so
#10 0xaba43c4e in SwGlossaryDlg::ShowPreview() ()
   from /home/ivan/libo/master/solver/unxlngi6.pro/lib/libswuilo.so


since commit:


commit 32eaa77db33b3b1f5793e92167b9f8c2708ea543
Author: Noel Grandin <noel@peralex.com>
Date:   Mon Jul 8 13:13:28 2013 +0200

    fdo#46808, Convert frame::FrameControl service to new style


Noel, could you take a look please?
Comment 1 Commit Notification 2013-07-23 13:03:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8fa15f0ea3bbf38f5142f83121b7c72c483c7f5

fdo#67213 - crash on opening AutoText dialog (Ctrl+F3)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Ivan Timofeev (retired) 2013-07-23 16:31:51 UTC
(In reply to comment #1)
> Noel Grandin committed a patch related to this issue.
> It has been pushed to "master":

Well, now it doesn't crash, but there was a preview which is not visible now. That FrameControl must still be created I guess.
Comment 3 Commit Notification 2013-07-24 12:55:55 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5bf0fa958a709394be833584ed610a2d759ca32

Revert "fdo#67213 - crash on opening AutoText dialog (Ctrl+F3)"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-07-24 12:56:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96bd18f692f933b328facf75eb200114bb55eee7

fdo#67213 - crash on opening AutoText dialog (Ctrl+F3



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Ivan Timofeev (retired) 2013-07-24 17:28:12 UTC
Alright, closing, thank you.