fdo#67213 - crash on opening AutoText dialog (Ctrl+F3)

I created this bug with commit
32eaa77db33b3b1f5793e92167b9f8c2708ea543
"fdo#46808, Convert frame::FrameControl service to new style"

If we cannot create a css::frame::FrameControl service, just continue.

Change-Id: Iffd6952fd5153af5a1ab72af2bc55864816a750d